--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -43,3 +43,25 @@ body{
     padding-right: 10px;
     padding-left: 10px;
 }
+/*estilos inicio de sesion*/
+.ingresar_texto{
+    width: 40%;
+    margin-left: 30%;
+}
+.texto_is{
+    font-style: oblique;
+    color: #495057;
+}
+@media only screen and (min-width:0px) and (max-width:767px){
+    .ingresar_texto{
+        width: 100%;
+        margin-left: 0;
+    }
+}
+@media only screen and (min-width:768px) and (max-width:999px){
+    .ingresar_texto{
+        width: 60%;
+        margin-left: 19%;
+    }
+}
+
