--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -72,3 +72,91 @@ body{
 .borde_input{
     border: black solid 1px;
 }
+
+/*Quienes Somos Estilos*/
+.quienes_somos{
+    background-color: #fff; 
+    border: black solid 1px;
+    color: #000;
+    font-family: 'Lato', sans-serif;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 1%;
+}
+
+
+
+/*AJUSTES REDES SOCIALES Y PIES DE PAGINAS*/
+.fa {
+    padding: 20px;
+    font-size: 35px !important;
+    width: 70px;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 50%;
+    
+}
+.fa:hover {
+    opacity: 0.7;
+    color: white !important;
+    text-decoration: none !important;
+}
+.fa-instagram {
+    
+    background: #f09433; 
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    color: white;
+        
+}
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.lados_pie_pag{
+    border-left: black solid 1px; 
+    border-right: black solid 1px;
+}
+@media only screen and (max-width: 767px){
+    .lados_pie_pag{
+        margin-top: 5px;
+    }
+}
+
+/*Estilos Poleras*/
+
+.buscar{
+    width: 300px;
+    margin-right: 0 !important;
+}
+/*AJUSTE PARA LOS PRODUCTOS*/
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+}
+.price {
+    color: black;
+    font-size: 22px;
+}
+.card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+} 
+.card button:hover {
+    opacity: 0.7;
+}
+.espacio_prod{
+    margin-bottom: 30px;
+}
