--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -42,6 +42,20 @@ body{
     padding-right: 10px;
     padding-left: 10px;
 }
+@media only screen and (max-width: 991px){
+    .separacion_reg_ini{
+        padding-right: 0px;
+        padding-left: 0px;
+        margin-top: 10px;
+    }
+    .bottom_ini{
+        margin-bottom: 10px;
+    }
+    .padding_navbar{
+        padding-left: 10px !important;
+    }
+}
+
 /*estilos inicio de sesion*/
 .texto_is{
     color: black;
