--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -2,7 +2,7 @@ body{
     background-image: url("http://itectehuacan.edu.mx/TutoriasFinalSistema/Imagenes/backgrounds/1.jpg");
 
 }
-/*NAV BAR COLORS*/
+/*NAV BAR ESTILOS*/
 .color_letra{
     color: #216DB4;
 }
@@ -52,7 +52,7 @@ body{
         margin-bottom: 10px;
     }
     .padding_navbar{
-        padding-left: 10px !important;
+        padding-left: 10px  !important;
     }
 }
 
@@ -184,6 +184,42 @@ iframe{
 .espacio_prod{
     margin-bottom: 30px;
 }
+.texto_producto {
+    position: relative;
+    width: 50%;
+}
+.producto {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #4F4F4F;
+}
+.texto_producto:hover .overlay {
+    opacity: 0.8;
+}
+.texto {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+  
 
 /*Estilos Contactanos*/
 .espaciado_superior{
@@ -206,137 +242,53 @@ iframe{
     display: flex;
     flex-direction: column;
 }
-.title {
-    height: 60px;
-    border-bottom: 1px solid #E1E8EE;
-    padding: 20px 30px;
-    color: #5E6977;
-    font-size: 18px;
-    font-weight: 400;
+
+/*DETALLE PRODUCTO ESTILOS*/
+.img_detalle{
+    width: 100%;
+    max-width: 300px;
+    transition: transform .2s;
 }
-   
-.item {
-    padding: 20px 30px;
-    height: 120px;
-    display: flex;
+.img_detalle:hover {
+    -ms-transform: scale(2);
+    -webkit-transform: scale(2);
+    transform: scale(2); 
 }
-   
-.item:nth-child(3) {
-    border-top:  1px solid #E1E8EE;
-    border-bottom:  1px solid #E1E8EE;
+.texto_detalle{
+    font-family: 'Lato', sans-serif;
 }
-.buttons {
-    position: relative;
-    padding-top: 30px;
-    margin-right: 60px;
-}
-.delete-btn,
-.like-btn {
-    display: inline-block;
-    Cursor: pointer;
-}
-.delete-btn {
-    width: 18px;
-    height: 17px;
-    background: url(&amp;quot;delete-icn.svg&amp;quot;) no-repeat center;
-}
-   
-.like-btn {
-    position: absolute;
-    top: 9px;
-    left: 15px;
-    background: url('twitter-heart.png');
-    width: 60px;
-    height: 60px;
-    background-size: 2900%;
-    background-repeat: no-repeat;
-}
-.is-active {
-    animation-name: animate;
-    animation-duration: .8s;
-    animation-iteration-count: 1;
-    animation-timing-function: steps(28);
-    animation-fill-mode: forwards;
-}
-   
-@keyframes animate {
-    0%   { background-position: left;  }
-    50%  { background-position: right; }
-    100% { background-position: right; }
-}
-.image {
-    margin-right: 50px;
-}
-.description {
-    padding-top: 10px;
-    margin-right: 60px;
-    width: 115px;
-    color: #000;
-}
-.quantity {
-    padding-top: 20px;
-    margin-right: 60px;
-    color: #000;
-}
-.quantity input {
-    -webkit-appearance: none;
+.comprar {
     border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
     text-align: center;
-    width: 32px;
-    font-size: 16px;
-    color: #43484D;
-    font-weight: 300;
-}
-   
-button[class*=btn] {
-    width: 30px;
-    height: 30px;
-    background-color: #E1E8EE;
-    border-radius: 6px;
-    border: none;
     cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+} 
+.comprar:hover {
+    opacity: 0.7;
 }
-.minus-btn img {
-    margin-bottom: 3px;
-}
-.plus-btn img {
-    margin-top: 2px;
-}
-   
-button:focus,
-input:focus {
-    outline:0;
-}
-.total-price {
-    width: 83px;
-    padding-top: 27px;
-    text-align: center;
-    font-size: 16px;
-    color: #43484D;
-    font-weight: 300;
-}
-@media (max-width: 800px) {
-    .shopping-cart {
-      width: 100%;
-      height: auto;
-      overflow: hidden;
+@media only screen and (max-width: 767px){
+    .titulo_det_centro{
+        text-align: center;
     }
-    .item {
-      height: auto;
-      flex-wrap: wrap;
-      justify-content: center;
+}
+@media only screen and (min-width: 767px) and (max-width: 991px) {
+    .img_detalle{
+        width: 100%;
+        max-width: 300px;
+        transition: transform .2s;
+        margin-top: 70px !important;
     }
-    .image img {
-      width: 50%;
-    }
-    .image,
-    .quantity,
-    .description {
-      width: 100%;
-      text-align: center;
-      margin: 6px 0;
-    }
-    .buttons {
-      margin-right: 20px;
+}
+@media only screen and (min-width: 992px){
+    .img_detalle{
+        width: 100%;
+        max-width: 300px;
+        transition: transform .2s;
+        margin-top: 45px !important;
     }
 }
